--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_one_pic">OnePicActivity</string>
+    <string name="title_activity_webpage">WebpageActivity</string>
 
 </resources>
